--- a/pinlockview/src/main/res/values/attrs.xml
+++ b/pinlockview/src/main/res/values/attrs.xml
@@ -3,6 +3,7 @@
     <declare-styleable name="PinLockView">
         <attr name="pinLength" format="integer" />
         <attr name="keypadTextColor" format="color" />
+        <attr name="keypadTextColorList" format="reference" />
         <attr name="keypadTextSize" format="dimension" />
         <attr name="keypadButtonSize" format="dimension" />
         <attr name="keypadVerticalSpacing" format="dimension" />
